/*
Copyright The Stash Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package stash.appscode.dev.installer.apis.installer.v1alpha1;

import "k8s.io/api/core/v1/generated.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1alpha1";

message Container {
  optional ImageRef imageRef = 1;

  // Compute Resources required by the sidecar container.
  // +optional
  optional k8s.io.api.core.v1.ResourceRequirements resources = 2;

  // Security options the pod should run with.
  // +optional
  optional k8s.io.api.core.v1.SecurityContext securityContext = 3;
}

message ElasticsearchBackup {
  optional string args = 1;
}

message ElasticsearchRestore {
  optional string args = 1;
}

message HealthcheckSpec {
  // +optional
  optional bool enabled = 1;
}

message ImageRef {
  optional string registry = 1;

  optional string repository = 2;

  optional string tag = 3;
}

message MariaDBBackup {
  optional string args = 1;
}

message MariaDBRestore {
  optional string args = 1;
}

message MongoDBBackup {
  optional string args = 1;
}

message MongoDBRestore {
  optional string args = 1;
}

message Monitoring {
  optional string agent = 1;

  // +optional
  optional bool backup = 2;

  // +optional
  optional bool operator = 3;

  optional PrometheusSpec prometheus = 4;

  optional ServiceMonitorLabels serviceMonitor = 5;
}

message MySQLBackup {
  optional string args = 1;
}

message MySQLRestore {
  optional string args = 1;
}

message PerconaXtraDBBackup {
  optional string args = 1;

  optional int32 socatRetry = 2;
}

message PerconaXtraDBRestore {
  optional string args = 1;

  optional int32 targetAppReplicas = 2;
}

message Platform {
  // +optional
  optional bool openshift = 1;
}

message PostgresBackup {
  optional string args = 1;
}

message PostgresRestore {
  optional string args = 1;
}

message PrometheusSpec {
  // +optional
  optional string namespace = 1;
}

message ServiceAccountSpec {
  optional bool create = 1;

  // +optional
  optional string name = 2;

  // +optional
  map<string, string> annotations = 3;
}

message ServiceMonitorLabels {
  // +optional
  map<string, string> labels = 1;
}

message ServingCerts {
  optional bool generate = 1;

  // +optional
  optional string caCrt = 2;

  // +optional
  optional string serverCrt = 3;

  // +optional
  optional string serverKey = 4;
}

// +kubebuilder:object:root=true
// +kubebuilder:resource:path=stashelasticsearchs,singular=stashelasticsearch,categories={stash,appscode}
message StashElasticsearch {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional StashElasticsearchSpec spec = 2;
}

// StashElasticsearchList is a list of StashElasticsearchs
message StashElasticsearchList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // Items is a list of StashElasticsearch CRD objects
  repeated StashElasticsearch items = 2;
}

// StashElasticsearchSpec is the schema for Stash Elasticsearch values file
message StashElasticsearchSpec {
  // +optional
  optional string nameOverride = 1;

  // +optional
  optional string fullnameOverride = 2;

  optional ImageRef image = 3;

  optional ElasticsearchBackup backup = 4;

  optional ElasticsearchRestore restore = 5;
}

// +kubebuilder:object:root=true
// +kubebuilder:resource:path=stashmariadbs,singular=stashmariadb,categories={stash,appscode}
message StashMariaDB {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional StashMariaDBSpec spec = 2;
}

// StashMariaDBList is a list of StashMariaDBs
message StashMariaDBList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // Items is a list of StashMariaDB CRD objects
  repeated StashMariaDB items = 2;
}

// StashMariaDBSpec is the schema for Stash MariaDB values file
message StashMariaDBSpec {
  // +optional
  optional string nameOverride = 1;

  // +optional
  optional string fullnameOverride = 2;

  optional ImageRef image = 3;

  optional MariaDBBackup backup = 4;

  optional MariaDBRestore restore = 5;
}

// +kubebuilder:object:root=true
// +kubebuilder:resource:path=stashmongodbs,singular=stashmongodb,categories={stash,appscode}
message StashMongoDB {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional StashMongoDBSpec spec = 2;
}

// StashMongoDBList is a list of StashMongoDBs
message StashMongoDBList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // Items is a list of StashMongoDB CRD objects
  repeated StashMongoDB items = 2;
}

// StashMongoDBSpec is the schema for Stash MongoDB values file
message StashMongoDBSpec {
  // +optional
  optional string nameOverride = 1;

  // +optional
  optional string fullnameOverride = 2;

  optional ImageRef image = 3;

  optional MongoDBBackup backup = 4;

  optional MongoDBRestore restore = 5;

  optional int32 maxConcurrency = 6;
}

// +kubebuilder:object:root=true
// +kubebuilder:resource:path=stashmysqls,singular=stashmysql,categories={stash,appscode}
message StashMySQL {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional StashMySQLSpec spec = 2;
}

// StashMySQLList is a list of StashMySQLs
message StashMySQLList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // Items is a list of StashMySQL CRD objects
  repeated StashMySQL items = 2;
}

// StashMySQLSpec is the schema for Stash MySQL values file
message StashMySQLSpec {
  // +optional
  optional string nameOverride = 1;

  // +optional
  optional string fullnameOverride = 2;

  optional ImageRef image = 3;

  optional MySQLBackup backup = 4;

  optional MySQLRestore restore = 5;
}

// +kubebuilder:object:root=true
// +kubebuilder:resource:path=stashoperators,singular=stashoperator,categories={stash,appscode}
message StashOperator {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional StashOperatorSpec spec = 2;
}

// StashOperatorList is a list of StashOperators
message StashOperatorList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // Items is a list of StashOperator CRD objects
  repeated StashOperator items = 2;
}

// StashOperatorSpec is the schema for Stash operator values file
message StashOperatorSpec {
  // +optional
  optional string nameOverride = 1;

  // +optional
  optional string fullnameOverride = 2;

  optional int32 replicaCount = 3;

  optional Container operator = 4;

  optional Container pushgateway = 5;

  optional ImageRef cleaner = 6;

  optional string imagePullPolicy = 7;

  // +optional
  repeated string imagePullSecrets = 8;

  // +optional
  optional bool criticalAddon = 9;

  // +optional
  optional int32 logLevel = 10;

  // +optional
  map<string, string> annotations = 11;

  // +optional
  map<string, string> podAnnotations = 12;

  // +optional
  map<string, string> nodeSelector = 13;

  // If specified, the pod's tolerations.
  // +optional
  repeated k8s.io.api.core.v1.Toleration tolerations = 14;

  // If specified, the pod's scheduling constraints
  // +optional
  optional k8s.io.api.core.v1.Affinity affinity = 15;

  // PodSecurityContext holds pod-level security attributes and common container settings.
  // Optional: Defaults to empty.  See type description for default values of each field.
  // +optional
  optional k8s.io.api.core.v1.PodSecurityContext podSecurityContext = 16;

  optional ServiceAccountSpec serviceAccount = 17;

  optional WebHookSpec apiserver = 18;

  // +optional
  optional bool enableAnalytics = 19;

  optional Monitoring monitoring = 20;

  // +optional
  repeated string additionalPodSecurityPolicies = 21;

  // +optional
  optional Platform platform = 22;
}

// +kubebuilder:object:root=true
// +kubebuilder:resource:path=stashperconaxtradbs,singular=stashperconaxtradb,categories={stash,appscode}
message StashPerconaXtraDB {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional StashPerconaXtraDBSpec spec = 2;
}

// StashPerconaXtraDBList is a list of StashPerconaXtraDBs
message StashPerconaXtraDBList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // Items is a list of StashPerconaXtraDB CRD objects
  repeated StashPerconaXtraDB items = 2;
}

// StashPerconaXtraDBSpec is the schema for Stash Percona XtraDB values file
message StashPerconaXtraDBSpec {
  // +optional
  optional string nameOverride = 1;

  // +optional
  optional string fullnameOverride = 2;

  optional int32 replicaCount = 3;

  optional ImageRef image = 4;

  optional PerconaXtraDBBackup backup = 5;

  optional PerconaXtraDBRestore restore = 6;
}

// +kubebuilder:object:root=true
// +kubebuilder:resource:path=stashpostgress,singular=stashpostgres,categories={stash,appscode}
message StashPostgres {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional StashPostgresSpec spec = 2;
}

// StashPostgresList is a list of StashPostgress
message StashPostgresList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // Items is a list of StashPostgres CRD objects
  repeated StashPostgres items = 2;
}

// StashPostgresSpec is the schema for Stash Postgres values file
message StashPostgresSpec {
  // +optional
  optional string nameOverride = 1;

  // +optional
  optional string fullnameOverride = 2;

  optional ImageRef image = 3;

  optional PostgresBackup backup = 4;

  optional PostgresRestore restore = 5;
}

message WebHookSpec {
  optional int32 groupPriorityMinimum = 1;

  optional int32 versionPriority = 2;

  optional bool enableMutatingWebhook = 3;

  optional bool enableValidatingWebhook = 4;

  optional string ca = 5;

  // +optional
  optional bool bypassValidatingWebhookXray = 6;

  optional bool useKubeapiserverFqdnForAks = 7;

  optional HealthcheckSpec healthcheck = 8;

  optional ServingCerts servingCerts = 9;
}

